--- a/inst/htmlwidgets/package.json
+++ b/inst/htmlwidgets/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "browserify": "^16.1.1",
+    "d3-force-3d": "^1.1.0",
     "dat.gui": "^0.7.1",
     "watchify": "^3.11.0"
   }
